<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/tools"
    android:background="@drawable/background_gradient"
    android:gravity="center_horizontal"
    android:orientation="vertical">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="fitStart"
        android:src="@drawable/personality_dev" />


   <Switch
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/aaa"
       android:layout_gravity="right"
       android:checked="true"

       android:layout_marginRight="12dp"


       />
<TextView
    android:layout_width="wrap_content"
    android:layout_marginBottom="58dp"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:text="Eng"
    android:textColor="#ffffff"
    android:layout_marginRight="24dp"
    android:id="@+id/enhi"/>



    <Button
        android:id="@+id/btngoalsetting"
        android:layout_width="fill_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_background"
        android:text="@string/goalsetting"
        android:textColor="@color/white"
        android:textSize="20sp" />
    <Button
        android:id="@+id/confidence"
        android:layout_width="fill_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_background"
        android:text="@string/selfconfidence"
        android:textColor="@color/white"
        android:textSize="20sp" />
    <Button
        android:id="@+id/stressmanagement"
        android:layout_width="fill_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_background"
        android:text="@string/stress_management"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/interviewskill"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_background"
        android:text="@string/interviewskill"
        android:textColor="@color/white"
        android:textSize="20sp" />


</LinearLayout>
